--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             display: flex;
             flex: 1;
             overflow: hidden;
-            background-color: #e9f3e1;
+            background-color: #000;
             border-radius: 0px !important;
         }
 
