--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+zzz<!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 <head>
@@ -29,7 +29,7 @@
             display: flex;
             flex: 1;
             overflow: hidden;
-            background-color: #000;
+            background-color: #c9e0bd;
             border-radius: 0px !important;
         }
 
