--- a/templates/expense_analysis.html
+++ b/templates/expense_analysis.html
@@ -9,6 +9,7 @@
                 <option value="month">Поточний місяць</option>
                 <option value="year">Цей рік</option>
             </select>
+            <button class="filter-categories">Фільтрувати по категоріям</button>
         </form>
     </div>
     <div style="align-self: flex-end;">
