--- a/templates/expense_analysis.html
+++ b/templates/expense_analysis.html
@@ -64,6 +64,8 @@ document.getElementById('filter-form').addEventListener('submit', function(event
                 },
                 options: {
                     responsive: true,
+                    maintainAspectRatio: true,
+                    aspectRatio: 2,
                     plugins: {
                         legend: {
                             position: 'right'
