--- a/templates/expense_analysis.html
+++ b/templates/expense_analysis.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div style="display: block;  padding: 20px;">
+<div style="display: block; width: 80%; padding: 20px;">
     <div style="align-self: flex-start; margin-bottom: 20px;">
         <h4>Оберіть період часу для аналізу:</h4>
         <form id="filter-form" style="display: flex; flex-direction: column;">
