--- a/templates/expense_analysis.html
+++ b/templates/expense_analysis.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div style="align-self: center;">
-        <a id="download-pdf" href="#" style="display: none;" class="btn btn-primary button">Скачати PDF</a>
+        <a id="download-pdf" href="#" style="display: none;" class="btn btn-primary button">Скачати звіт</a>
     </div>
 </div>
 {% endblock %}
