--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         button { background-color: #435942FF; border: none; border-radius: 5px; color: white; cursor: pointer; }
 
         header { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; background: #4E4E4DFF; color: #BDDAB4FF; }
-        header .user-info { display: flex; align-items: center;  padding: 10px 20px;}
+        header .user-info { display: flex; align-items: center;}
         header .user-info i { width: 50px; height: 50px; border-radius: 25px; margin-right: 10px; }
         header .logout { margin-left: auto; }
 
