--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 
         header { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; background: #4E4E4DFF; color: #BDDAB4FF; }
         header .user-info { display: flex; align-items: center;}
-        header .user-info i { width: 50px; height: 50px; border-radius: 25px; margin-right: 10px; }
+        header .user-info i { width: 50px; border-radius: 25px; margin-right: 10px; }
         header .logout { margin-left: auto; }
 
         .container {
