--- a/templates/expense_analysis.html
+++ b/templates/expense_analysis.html
@@ -2,28 +2,28 @@
 {% block content %}
 <div style="display: flex; flex-direction: column; width: 70%; padding: 20px;">
     <div style="align-self: flex-start; margin-bottom: 20px;">
-        <h4>Оберіть період часу для аналізу:</h4>
+        <h4><i class="fas fa-calendar-alt"></i> Оберіть період часу для аналізу:</h4>
         <form id="filter-form" style="display: flex; flex-direction: column;">
             <select name="period">
                 <option value="week">Поточний тиждень</option>
                 <option value="month">Поточний місяць</option>
                 <option value="year">Цей рік</option>
             </select>
-            <button class="filter-categories">Фільтрувати по категоріям</button>
+            <button class="filter-categories"><i class="fas fa-filter"></i> Фільтрувати по категоріям</button>
         </form>
     </div>
     <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
         <div style="flex: 1; margin-left: 10px;">
-            <h4>Порівняння витрат за категоріями з попереднім роком</h4>
+            <h4><i class="fas fa-chart-bar"></i> Порівняння витрат за категоріями з попереднім роком</h4>
             <canvas id="expense-bar-chart" style="width: 100%;"></canvas>
         </div>
         <div style="flex: 1; margin-right: 10px;">
-            <h4>Діаграма витрат</h4>
+            <h4><i class="fas fa-chart-pie"></i> Діаграма витрат</h4>
             <canvas id="expense-pie-chart" style="width: 100%;"></canvas>
         </div>
     </div>
     <div style="align-self: center;">
-        <a id="download-pdf" href="#" style="display: none;" class="btn btn-primary button">Завантажити звіт</a>
+        <a id="download-pdf" href="#" style="display: none;" class="btn btn-primary button"><i class="fas fa-download"></i> Завантажити звіт</a>
     </div>
 </div>
 {% endblock %}
@@ -134,138 +134,3 @@ document.getElementById('filter-form').addEventListener('submit', function(event
 });
 </script>
 {% endblock %}
-
-
-{#{% extends "base.html" %}#}
-{#{% block content %}#}
-{#<div style="display: block; width: 50%; padding: 20px;">#}
-{#    <div style="align-self: flex-start; margin-bottom: 20px;">#}
-{#        <h4>Оберіть період часу для аналізу:</h4>#}
-{#        <form id="filter-form" style="display: flex; flex-direction: column;">#}
-{#            <select name="period">#}
-{#                <option value="week">Поточний тиждень</option>#}
-{#                <option value="month">Поточний місяць</option>#}
-{#                <option value="year">Цей рік</option>#}
-{#            </select>#}
-{#            <button class="filter-categories">Фільтрувати по категоріям</button>#}
-{#        </form>#}
-{#        <a id="download-pdf" href="#" style="display: none;" class="btn btn-primary">Скачати PDF</a>#}
-{#    </div>#}
-{#    <div style="align-self: flex-end;">#}
-{#        <h4>Діаграма витрат</h4>#}
-{#        <canvas style="width: 25%;" id="expense-pie-chart"></canvas>#}
-{#    </div>#}
-{#    <div style="align-self: flex-end;">#}
-{#        <h4>Порівняння витрат за категоріями з попереднім роком</h4>#}
-{#        <canvas style="width: 25%;" id="expense-bar-chart"></canvas>#}
-{#    </div>#}
-{#    <a id="download-pdf" href="#" style="display: none;" class="btn btn-primary button">Скачати PDF</a>#}
-{#</div>#}
-{#{% endblock %}#}
-{##}
-{#{% block extra_js %}#}
-{#<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>#}
-{#<script>#}
-{#document.getElementById('filter-form').addEventListener('submit', function(event) {#}
-{#    event.preventDefault();#}
-{#    const period = document.querySelector('select[name="period"]').value;#}
-{#    fetch(`/filter-expenses/?period=${period}`)#}
-{#        .then(response => response.json())#}
-{#        .then(data => {#}
-{#            const expenseSummary = data.expense_summary;#}
-{#            const expenseSummaryLastYear = data.expense_summary_last_year;#}
-{#            const pdfUrl = data.pdf_url;#}
-{#            document.getElementById('download-pdf').href = pdfUrl;#}
-{#            document.getElementById('download-pdf').style.display = 'block';#}
-{##}
-{#            const labels = Object.keys(expenseSummary);#}
-{#            const values = Object.values(expenseSummary);#}
-{#            const lastYearValues = labels.map(label => expenseSummaryLastYear[label] || 0);#}
-{##}
-{#            const ctxPie = document.getElementById('expense-pie-chart').getContext('2d');#}
-{#            if (window.expensePieChart) {#}
-{#                window.expensePieChart.destroy();#}
-{#            }#}
-{#            window.expensePieChart = new Chart(ctxPie, {#}
-{#                type: 'pie',#}
-{#                data: {#}
-{#                    labels: labels,#}
-{#                    datasets: [{#}
-{#                        label: 'Витрати за типами',#}
-{#                        data: values,#}
-{#                        backgroundColor: [#}
-{#                            'rgba(255,99,132,0.41)',#}
-{#                            'rgba(54,162,235,0.56)',#}
-{#                            'rgba(255,206,86,0.44)',#}
-{#                            'rgba(75,192,192,0.52)',#}
-{#                            'rgba(153,102,255,0.65)',#}
-{#                            'rgba(255,159,64,0.51)'#}
-{#                        ],#}
-{#                        borderColor: [#}
-{#                            'rgba(255, 99, 132, 1)',#}
-{#                            'rgba(54, 162, 235, 1)',#}
-{#                            'rgba(255, 206, 86, 1)',#}
-{#                            'rgba(75, 192, 192, 1)',#}
-{#                            'rgba(153, 102, 255, 1)',#}
-{#                            'rgba(255, 159, 64, 1)'#}
-{#                        ],#}
-{#                        borderWidth: 1#}
-{#                    }]#}
-{#                },#}
-{#                options: {#}
-{#                    responsive: true,#}
-{#                    maintainAspectRatio: true,#}
-{#                    aspectRatio: 2,#}
-{#                    plugins: {#}
-{#                        legend: {#}
-{#                            position: 'right'#}
-{#                        }#}
-{#                    }#}
-{#                }#}
-{#            });#}
-{##}
-{#            const ctxBar = document.getElementById('expense-bar-chart').getContext('2d');#}
-{#            if (window.expenseBarChart) {#}
-{#                window.expenseBarChart.destroy();#}
-{#            }#}
-{#            window.expenseBarChart = new Chart(ctxBar, {#}
-{#                type: 'bar',#}
-{#                data: {#}
-{#                    labels: labels,#}
-{#                    datasets: [#}
-{#                        {#}
-{#                            label: 'Поточний рік',#}
-{#                            data: values,#}
-{#                            backgroundColor: 'rgba(54,162,235,0.56)',#}
-{#                            borderColor: 'rgba(54, 162, 235, 1)',#}
-{#                            borderWidth: 1#}
-{#                        },#}
-{#                        {#}
-{#                            label: 'Попередній рік',#}
-{#                            data: lastYearValues,#}
-{#                            backgroundColor: 'rgba(255,99,132,0.41)',#}
-{#                            borderColor: 'rgba(255, 99, 132, 1)',#}
-{#                            borderWidth: 1#}
-{#                        }#}
-{#                    ]#}
-{#                },#}
-{#                options: {#}
-{#                    responsive: true,#}
-{#                    maintainAspectRatio: true,#}
-{#                    aspectRatio: 2,#}
-{#                    scales: {#}
-{#                        y: {#}
-{#                            beginAtZero: true#}
-{#                        }#}
-{#                    },#}
-{#                    plugins: {#}
-{#                        legend: {#}
-{#                            position: 'right'#}
-{#                        }#}
-{#                    }#}
-{#                }#}
-{#            });#}
-{#        });#}
-{#});#}
-{#</script>#}
-{#{% endblock %}#}
