--- a/templates/add_api_key.html
+++ b/templates/add_api_key.html
@@ -5,6 +5,12 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    <div class="tooltip">
+        <span class="tooltiptext">
+            API для отримання інформації про виписки та стан особистого рахунку та рахунків ФОП. Для надання доступу потрібно пройти авторизацію у особистому кабінеті <a href="https://api.example.com">https://api.example.com</a> та отримати токен для персонального використання.
+        </span>
+        <i class="fa fa-question-circle"></i> Що таке API-ключ?
+    </div>
      {% if form.errors %}
         <div class="alert alert-danger">
             <ul>
