update fix getting amounts

--- a/templates/add_api_key.html
+++ b/templates/add_api_key.html
@@ -7,7 +7,9 @@
     {{ form.as_p }}
     <div class="tooltip">
         <span class="tooltiptext">
-            API для отримання інформації про виписки та стан особистого рахунку та рахунків ФОП. Для надання доступу потрібно пройти авторизацію у особистому кабінеті <a href="https://api.monobank.ua/">hhttps://api.monobank.ua/</a> та отримати токен для персонального використання.
+            API необхідний для отримання інформації про виписки та стан особистого рахунку та рахунків ФОП. Для надання доступу потрібно пройти авторизацію у особистому кабінеті <a href="https://api.monobank.ua/">https://api.monobank.ua/</a> та отримати токен для персонального використання.
+API недоступне для клієнтів до 16 років, дані за дитячими рахунками доступні з батьківського акаунту.
+ 
         </span>
         <i class="fa fa-question-circle"></i> Що таке API-ключ?
     </div>
